--- a/_posts/2018-06-17-[공지] 오픈 예정일.md
+++ b/_posts/2018-06-17-[공지] 오픈 예정일.md
@@ -4,9 +4,9 @@ title: 사이트 오픈 예정일
 tags: [공지]
 excerpt_separator: <!--more-->
 ---
-2주에 게시글 1개를 목표로 시작합니다.
+DisQus 테스트중입니다.
 <!--more-->
 
 
 
-### 오픈 예정일: 2018.06.24
+### 오픈 예정일: 미정
