네비바 내용 추가

--- a/_posts/2019-02-19-Objc-커스텀네비게이션바.md
+++ b/_posts/2019-02-19-Objc-커스텀네비게이션바.md
@@ -320,7 +320,12 @@ UIButton *rightBtn = [[UIButton alloc] initWithFrame:CGRectMake(0, 0, 2, 44)];
 
 쟤들도 그랬다. 12만 고정폭이 들어갔나보다. 빡침,,
 
+다해놨더니!!!!!!!!!!!! 하 딥빡이었다 정말,
 
+근데 더화나는건 Swift에선 안그런다는거...
+Objc 넘나 힘든것
+
+<br>
 
 오 근데 블로그 쓰다 30이 최소인걸 알았는데, 
 
