--- a/_posts/2019-02-19-Objc-커스텀네비게이션바.md
+++ b/_posts/2019-02-19-Objc-커스텀네비게이션바.md
@@ -1,6 +1,6 @@
 ---
 layout: post                       
-title: "(Objective-C) 커스텀 네비게이션바"
+title: "Objective-C - 커스텀 네비게이션바"
 categories: [Objective-C] 
 ---
 
