spm 만들기 멘트 수정

--- a/_posts/2021-07-31-swift-SPM 만들기.md
+++ b/_posts/2021-07-31-swift-SPM 만들기.md
@@ -55,7 +55,7 @@ categories: [Swift]
 
 애플은 도입이 늦긴해도 한번 넣으면 제대로 해주니 기대가 되었다.
 
-> 요즘엔 Xcode Cloud가 된다. 인증서 관리, 코드 관리 등이 더욱 쉬워질 것 같아서!
+> 요즘엔 Xcode Cloud가 기대된다. 인증서 관리, 코드 관리 등이 더욱 쉬워질 것 같아서!
 
 <br>
 
